<resources>
    <string name="app_name">Barbera</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="skipLogin"><u>Skip LogIn</u></string>
    <string name="HeadingPrivacy"><u>Privacy Policy</u></string>

    <string name="aboutUs">"Barbera is an online salon facility where you can get salon serviceItems at home. We provide salon serviceItems for both men and women at salon price. We at Barbera are committed to provide excellent quality serviceItems to our customers, who are the one who trusted in Barbera, who trusted in us. During this time, we are working to provide safe and sanitised serviceItems at your doorsteps."</string>
    <string name="privacyPolicy">
        " 1. When You Sign Up for Barbera, you agree to give us certain information voluntarily. This includes your Name, Phone Number,email address and residential address.\n\n2. This data is only used for Service Booking Purposes.\n\n3. We don\'t import any other kind of hidden data from your device, neither do we require any external permissions to run Barbera app.\n\n4. You can continue without signing up, and can see our serviceItem catalogue. But to book a serviceItem, you need to sign up.\n\n5. Your data is completely safe with us. We don't use your credentials for any monetary/advertisement purposes. Barbera app is completely ad free.\n\n"
    </string>
    <string name="referAndEarn">"Refer your freinds and invite them to Barbera App using your invite link. On their successful sign up, you will get an essential serviceItem for up to 100% off"</string>
    <string name="weddingPackage"><b>1st Sitting</b>\nFacial(Kaya), Threading, Hair Massage\n\n2nd Sitting\nFacial(Kaya), Threading, Hair Massage\n\n3rd Sitting\nFacial(Kaya), Threading, Hair Massage\n\n4th Sitting\nFacial(Kaya), Threading, Hair Massage\n\n5th Sitting\nMakeup, Lehenga Drape, Body Wax(Rica), Hair Spa, Hair Cut, BOdy Spa(Loreal), Manicure, Pedicure, Threading, Hairwash, Facial(Kaya)</string>
    <string name="my_coupon">My Coupon</string>
    <string name="user_name">Name</string>
    <string name="refer_earn">Refer 🙲 Earn</string>
    <string name="contact_us">Contact Us</string>
    <string name="user_privacy">User Privacy</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="user_privacy_content">\u2022 When you signup for Barbera , you agree to give us certain information voluntarily. This includes your name, Phone Number, Email address and resedential Address. \n\n\u2022 This data is only used for Service Booking Purposes. \n\n\u2022 We don\'t import any other kind of hidden data from your device, neither our service catalogue. But to book service, You need to signup. \n\n\u2022 You can continue without signing up, and can see our services catalogue. But to book a service, you need to signup. \n\n\u2022 Your data is completely safe with us.</string>
    <string name="about_us_content">Barbera is an online salon facility which provides doorstep salon services. We provide salon services for both men and women at salon price. We at barbera are comitted to provide excellent quality services to our customers, who are the one who trusted in Barberan, who trusted in us. During this time we are working to provide safe and sanitised at your doorsteps</string>
    <string name="for_2_items">(for 2 items)</string>
</resources>